--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "project-backend",
   "version": "1.0.0",
   "description": "learning backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "nikhil bhatt",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
